--- a/ClassLibrary1/Properties/Resources.resx
+++ b/ClassLibrary1/Properties/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="racessetup" xml:space="preserve">
+    <value>All races are set up.</value>
+  </data>
   <data name="startracepromp" xml:space="preserve">
     <value>Press [F10] to start first race</value>
   </data>
