--- a/ClassLibrary1/Properties/Resources.resx
+++ b/ClassLibrary1/Properties/Resources.resx
@@ -132,6 +132,9 @@
   <data name="intro5" xml:space="preserve">
     <value>You will spend most of the time in a car.</value>
   </data>
+  <data name="intro6" xml:space="preserve">
+    <value>You will be given a start point and an end point</value>
+  </data>
   <data name="racessetup" xml:space="preserve">
     <value>All races are set up.</value>
   </data>
