--- a/ClassLibrary1/Properties/Resources.resx
+++ b/ClassLibrary1/Properties/Resources.resx
@@ -142,7 +142,7 @@
     <value>You can either adhere to the traffic rules or ignore them.</value>
   </data>
   <data name="intro9" xml:space="preserve">
-    <value />
+    <value>It is possible to run over pedestrians.</value>
   </data>
   <data name="racessetup" xml:space="preserve">
     <value>All races are set up.</value>
