--- a/ClassLibrary1/Properties/Resources.resx
+++ b/ClassLibrary1/Properties/Resources.resx
@@ -126,6 +126,9 @@
   <data name="intro11" xml:space="preserve">
     <value>or persecution by the police.</value>
   </data>
+  <data name="intro12" xml:space="preserve">
+    <value>Your wanted level is shown on the top right of the screen.</value>
+  </data>
   <data name="intro2" xml:space="preserve">
     <value>This study focusses on the singleplayer mode of the game.</value>
   </data>
