--- a/ClassLibrary1/Properties/Resources.resx
+++ b/ClassLibrary1/Properties/Resources.resx
@@ -138,6 +138,9 @@
   <data name="intro15" xml:space="preserve">
     <value>When the car's hitpoints drop to 0, it will explode.</value>
   </data>
+  <data name="intro16" xml:space="preserve">
+    <value>When the character's hitpoints drop to 0, he will fall unconscious.</value>
+  </data>
   <data name="intro2" xml:space="preserve">
     <value>This study focusses on the singleplayer mode of the game.</value>
   </data>
