--- a/ClassLibrary1/Properties/Resources.resx
+++ b/ClassLibrary1/Properties/Resources.resx
@@ -141,6 +141,9 @@
   <data name="intro16" xml:space="preserve">
     <value>When the character's hitpoints drop to 0, he will fall unconscious.</value>
   </data>
+  <data name="intro17" xml:space="preserve">
+    <value>The car is controlled with the steering wheel and gas/brake pedal.</value>
+  </data>
   <data name="intro2" xml:space="preserve">
     <value>This study focusses on the singleplayer mode of the game.</value>
   </data>
