--- a/ClassLibrary1/Properties/Resources.resx
+++ b/ClassLibrary1/Properties/Resources.resx
@@ -144,6 +144,9 @@
   <data name="intro17" xml:space="preserve">
     <value>The car is controlled with the steering wheel and gas/brake pedal.</value>
   </data>
+  <data name="intro18" xml:space="preserve">
+    <value>There are no blinkers. Just turn.</value>
+  </data>
   <data name="intro2" xml:space="preserve">
     <value>This study focusses on the singleplayer mode of the game.</value>
   </data>
