--- a/ClassLibrary1/Properties/Resources.resx
+++ b/ClassLibrary1/Properties/Resources.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="convoy_intro_1" xml:space="preserve">
+    <value>In this task you will follow the other transporter.</value>
+  </data>
+  <data name="convoy_intro_2" xml:space="preserve">
+    <value>Try to stay close to it!</value>
+  </data>
   <data name="intro1" xml:space="preserve">
     <value>GTA V is an open world action game.</value>
   </data>
