--- a/ClassLibrary1/Properties/Resources.resx
+++ b/ClassLibrary1/Properties/Resources.resx
@@ -123,6 +123,9 @@
   <data name="convoy_intro_2" xml:space="preserve">
     <value>Try to stay close to it!</value>
   </data>
+  <data name="convoy_intro_3" xml:space="preserve">
+    <value>A blue dot on the map shows it's position.</value>
+  </data>
   <data name="intro1" xml:space="preserve">
     <value>GTA V is an open world action game.</value>
   </data>
