--- a/ClassLibrary1/Properties/Resources.resx
+++ b/ClassLibrary1/Properties/Resources.resx
@@ -178,7 +178,7 @@
     <value>You control one of these three player characters.</value>
   </data>
   <data name="intro4" xml:space="preserve">
-    <value>All of the tests revolve around a driving task.</value>
+    <value>All of the tasks revolve around a driving task.</value>
   </data>
   <data name="intro5" xml:space="preserve">
     <value>You will spend most of the time in a car.</value>
