fix typo in english convoy instruction

--- a/ClassLibrary1/Properties/Resources.resx
+++ b/ClassLibrary1/Properties/Resources.resx
@@ -124,7 +124,7 @@
     <value>Try to stay close to it!</value>
   </data>
   <data name="convoy_intro_3" xml:space="preserve">
-    <value>A blue dot on the map shows it's position.</value>
+    <value>A blue dot on the map shows its position.</value>
   </data>
   <data name="intro1" xml:space="preserve">
     <value>GTA V is an open world action game.</value>
