--- a/ClassLibrary1/Properties/Resources.resx
+++ b/ClassLibrary1/Properties/Resources.resx
@@ -126,6 +126,21 @@
   <data name="convoy_intro_3" xml:space="preserve">
     <value>A blue dot on the map shows its position.</value>
   </data>
+  <data name="desert_intro_1" xml:space="preserve">
+    <value>In this task you drive a motorcycle.</value>
+  </data>
+  <data name="desert_intro_2" xml:space="preserve">
+    <value>There are 2 routes.</value>
+  </data>
+  <data name="desert_intro_3" xml:space="preserve">
+    <value>The normal route leads over roads and the highway</value>
+  </data>
+  <data name="desert_intro_4" xml:space="preserve">
+    <value>The alternative route leads through the desert.</value>
+  </data>
+  <data name="desert_intro_5" xml:space="preserve">
+    <value>The letter is marked by red checkpoints.</value>
+  </data>
   <data name="intro1" xml:space="preserve">
     <value>GTA V is an open world action game.</value>
   </data>
