+instructions for desert task

--- a/ClassLibrary1/Properties/Resources.resx
+++ b/ClassLibrary1/Properties/Resources.resx
@@ -139,7 +139,7 @@
     <value>The alternative route leads through the desert.</value>
   </data>
   <data name="desert_intro_5" xml:space="preserve">
-    <value>The letter is marked by red checkpoints.</value>
+    <value>The latter is marked by red checkpoints.</value>
   </data>
   <data name="intro1" xml:space="preserve">
     <value>GTA V is an open world action game.</value>
