--- a/ClassLibrary1/Properties/Resources.resx
+++ b/ClassLibrary1/Properties/Resources.resx
@@ -219,6 +219,9 @@
   <data name="menu_languages" xml:space="preserve">
     <value>Available languages</value>
   </data>
+  <data name="menu_not_during_task" xml:space="preserve">
+    <value>This can't be done during tasks.</value>
+  </data>
   <data name="racessetup" xml:space="preserve">
     <value>All races are set up.</value>
   </data>
