--- a/ClassLibrary1/Properties/Resources.resx
+++ b/ClassLibrary1/Properties/Resources.resx
@@ -234,6 +234,9 @@
   <data name="racessetup" xml:space="preserve">
     <value>All races are set up.</value>
   </data>
+  <data name="race_started" xml:space="preserve">
+    <value>Started race {0}/{1}</value>
+  </data>
   <data name="startracepromp" xml:space="preserve">
     <value>Press [F10] to start first race</value>
   </data>
