--- a/ClassLibrary1/Properties/Resources.resx
+++ b/ClassLibrary1/Properties/Resources.resx
@@ -213,6 +213,9 @@
   <data name="language_selected" xml:space="preserve">
     <value>Language selected: </value>
   </data>
+  <data name="last_race" xml:space="preserve">
+    <value>This was the last task!</value>
+  </data>
   <data name="menu_english" xml:space="preserve">
     <value>English</value>
   </data>
