--- a/ClassLibrary1/Properties/Resources.de-DE.resx
+++ b/ClassLibrary1/Properties/Resources.de-DE.resx
@@ -237,8 +237,11 @@
   <data name="racessetup" xml:space="preserve">
     <value>Alle Rennen wurden geladen.</value>
   </data>
+  <data name="race_finished" xml:space="preserve">
+    <value>Aufgabe beendet! - Zeit: {0}s</value>
+  </data>
   <data name="race_started" xml:space="preserve">
-    <value>Rennen {0}/{1} gestartet</value>
+    <value>Aufgabe {0}/{1} gestartet</value>
   </data>
   <data name="startracepromp" xml:space="preserve">
     <value>Drücken Sie [F10], um das erste Rennen zu starten</value>
