--- a/ClassLibrary1/Properties/Resources.resx
+++ b/ClassLibrary1/Properties/Resources.resx
@@ -258,4 +258,13 @@
   <data name="task_started" xml:space="preserve">
     <value>The task has started!</value>
   </data>
+  <data name="bleh" xml:space="preserve">
+    <value />
+  </data>
+  <data name="debug_mode_active" xml:space="preserve">
+    <value>~r~debug mode: ~b~{0}</value>
+  </data>
+  <data name="route_designer_active" xml:space="preserve">
+    <value>~r~route designer active: ~b~{0}</value>
+  </data>
 </root>
