--- a/ClassLibrary1/Properties/Resources.resx
+++ b/ClassLibrary1/Properties/Resources.resx
@@ -258,6 +258,9 @@
   <data name="task_started" xml:space="preserve">
     <value>The task has started!</value>
   </data>
+  <data name="carvscar_initialization" xml:space="preserve">
+    <value>Car vs. Car Initialization</value>
+  </data>
   <data name="convoy_initialization" xml:space="preserve">
     <value>Convoy Task Initialization</value>
   </data>
@@ -267,7 +270,13 @@
   <data name="debug_mode_active" xml:space="preserve">
     <value>~r~debug mode: ~b~{0}</value>
   </data>
+  <data name="desert_initialization" xml:space="preserve">
+    <value>Desert Initialization</value>
+  </data>
   <data name="route_designer_active" xml:space="preserve">
     <value>~r~route designer active: ~b~{0}</value>
+  </data>
+  <data name="suburban_initialization" xml:space="preserve">
+    <value>Suburban Initialization</value>
   </data>
 </root>
