--- a/ClassLibrary1/Properties/Resources.de-DE.resx
+++ b/ClassLibrary1/Properties/Resources.de-DE.resx
@@ -294,4 +294,7 @@
   <data name="suburban_intro_3" xml:space="preserve">
     <value>Das Auto ist schneller, als es aussieht.</value>
   </data>
+  <data name="intro_5_1" xml:space="preserve">
+    <value>Die Aufgabe dauern etwa zwischen 1 und 3min.</value>
+  </data>
 </root>
