--- a/ClassLibrary1/Properties/Resources.resx
+++ b/ClassLibrary1/Properties/Resources.resx
@@ -414,4 +414,7 @@
   <data name="steering" xml:space="preserve">
     <value>Input of the steering wheel</value>
   </data>
+  <data name="reset_warning" xml:space="preserve">
+    <value>Your car is placed on the road in: {0}</value>
+  </data>
 </root>
