--- a/ClassLibrary1/Properties/Resources.resx
+++ b/ClassLibrary1/Properties/Resources.resx
@@ -423,10 +423,10 @@
   <data name="cam_designer_cam_move" xml:space="preserve">
     <value>Use WASD, Up/Down, +/- and Numpad 7/9 to control cam</value>
   </data>
-  <data name="cam_designer_move" xml:space="preserve">
-    <value>Use WASD and mouse to move</value>
-  </data>
   <data name="cam_designer_toggle" xml:space="preserve">
     <value>Press X to toggle camera mode</value>
+  </data>
+  <data name="exploration_designer_move" xml:space="preserve">
+    <value>Use WASD and mouse to move</value>
   </data>
 </root>
