--- a/ClassLibrary1/Properties/Resources.resx
+++ b/ClassLibrary1/Properties/Resources.resx
@@ -426,7 +426,7 @@
   <data name="cam_designer_toggle" xml:space="preserve">
     <value>Press X to toggle camera mode</value>
   </data>
-  <data name="exploration_designer_move" xml:space="preserve">
+  <data name="exploration_move" xml:space="preserve">
     <value>Use WASD and mouse to move</value>
   </data>
 </root>
